syntax = "proto3";

package metadata.group;

import "google/protobuf/empty.proto";

option java_package = "org.enkrip.frappe.metadata.group";
option java_outer_classname = "FeedGroupServiceProto";
option java_multiple_files = true;

service FeedGroupService {
  // Create new feed group
  rpc CreateFeedGroup (CreateFeedGroupRequest) returns (CreateFeedGroupResponse) {}

  // Update feed group script
  rpc UpdateFeedGroupScript (UpdateFeedGroupScriptRequest) returns (UpdateFeedGroupScriptResponse) {}

  // Get list feed group
  rpc GetFeedGroups (GetFeedGroupsRequest) returns (GetFeedGroupsResponse) {}

  // Delete feed group
  rpc DeleteFeedGroup (DeleteFeedGroupRequest) returns (google.protobuf.Empty) {}
}

enum FeedType {
  FLAT = 0;
  AGGREGATED = 1;
}

message CreateFeedGroupRequest {
  string feed_group_id = 1;
  FeedType feed_type = 2;
  string script = 3;
  string client_id = 4;
}

message CreateFeedGroupResponse {
  string feed_group_id = 1;
  FeedType feed_type = 2;
  string created_date_iso = 4;
}

message UpdateFeedGroupScriptRequest {
  string feed_group_id = 1;
  string script = 3;
}

message UpdateFeedGroupScriptResponse {
  string feed_group_id = 1;
  string script = 2;
}

message GetFeedGroupsRequest {
  string client_id = 1;
  int32 limit = 2;
  oneof created_date {
    string created_date_iso_before = 3;
    string created_date_iso_after = 4;
  }
}

message GetFeedGroupsResponse {
  message FeedGroup {
    string feed_group_id = 1;
    string created_date_iso = 2;
  }

  string client_id = 1;
  repeated FeedGroup feed_group = 2;
}

message DeleteFeedGroupRequest {
  string feed_group_id = 1;
}